--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 #header{}
 #header .wrapper_Top{
+    background-color: rgb(128, 128, 221);
     height: 100px;
 }
 #header .wrapper_Top .logo{
     position: relative;
     float:right;
 }
-#header .wrapper_Top .logo a{}
+
+#header .wrapper_Top .logo a{
+   
+}
 #header .wrapper_Top .logo a img{
     width: 300px;
     height: auto;
@@ -15,8 +19,10 @@
 #header .wrapper_Top .nav{
     position: relative;
     float: left;
+
 }
-#header .wrapper_Top .nav ul{}
+#header .wrapper_Top .nav ul{
+}
 #header .wrapper_Top .nav ul li{
     display: inline;
     list-style-type: none;
@@ -39,7 +45,7 @@
 
 #header .wrapper_Top .search a{}
 #header .wrapper_Top .search a img{ 
-    width:20px;
+    width:22px;
     height: auto;
 }
 #header .menu{
@@ -53,7 +59,7 @@
     list-style-type: none;
     display:inline;
     text-align: center;
-    margin: 0 auto;
+    margin: auto;
 
 }
 #header .menu ul .menuList{
@@ -63,6 +69,9 @@
 }
 #header .menu ul .menuList a{
     font-size: 20px;
+    padding-left: 20px;
+    padding-right:20px;
+
 }
 #header .menu ul .menuList a img{
     width: 100px;
@@ -73,3 +82,45 @@
     display: block;
     
 }
+#header .header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+  }
+  
+
+  #header .topnav {
+    overflow: hidden;
+    background-color: #bfff47;
+  } 
+  
+  
+  #header .topnav a {
+    float: left;
+    display: block;
+    color: #dc89e7;
+    text-align: center;
+    padding: 20px 20px;
+    text-decoration: none;
+  }
+  
+ 
+  #header .topnav a:hover {
+    background-color: #ffffff;
+    color: black;
+  }
+  
+
+  #header .column {
+    float: left;
+    width: 33.33%;
+    padding: 20px;
+  }
+  
+  
+  #header .row::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
